1/3/11 put translation.credits at top of TranslationPanel
1/3/11 simplify sorting of properties
1/3/11 #2624, add translation.credits property, for specifying translation credits
9/20/10 #2492,#2497 move translationutility.jar to buildtools.jar, add dependency on build-tools
9/20/10 #2492,#2497 migrate DocumentIO to phetcommon XMLUtils
9/20/10 rename DocumentAdapter to FlashStringsAdapter
9/20/10 move stuff out of JavaUtils that specific to Flash strings XML schema
9/20/10 #2492,#2497 move methods related to string file names into JarCreator hierarchy
9/20/10 promote FlashJarCreator and JavaJarCreator to top-level types
9/20/10 #2492,#2497, push duplicate code into base class for creating localized jars
9/20/10 #2492,#2497, rename JarFactory to JarCreator, since this isn't a factory pattern (no objects are created)
9/20/10 delete Simulation.manifest, unused member
9/20/10 #2492,#2497, reorganization to remove duplicate code
9/18/10 simplify class hierarchy by removing redundant ISimulation interface
9/18/10 get rid of PropertiesIO class, what it was doing was trivial and only used in one place
9/18/10 #2492, move all related code to new translationutility.jar package
9/15/10 #2492, phase 2: move jar localization code to JarFactory (lightly tested)
9/15/10 #2492, move more general jar function to JarUtil
# 2.09.00 (44031) Sep 13, 2010
9/9/10 #2463, Java sim fix: missing strings should be left blank, not populated with English
9/9/10 #2463, fix: use type=java in simulation.properties for Java sim test jars
9/9/10 #2497, use better/consistent variable names in createTestJar methods
9/9/10 remove '_' prefix in member data names for older code, so that convention is the same throughout
9/9/10 converted ArrayLists to use generics
9/9/10 #2492, first phase: prepare code related to jar creation for migration to phetcommon (not completed, not fully tested)
8/30/10 #2463, add simulation.properties support for all sim, which facilitates multiple sims per Flash project