@@ -1,3 +1,4 @@
+1/3/11 add help button for translation.credits
 1/3/11 put translation.credits at top of TranslationPanel
 1/3/11 simplify sorting of properties
 1/3/11 #2624, add translation.credits property, for specifying translation credits
